opa/library/constraints/general/containerresources/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: container-must-have-limits-and-requests
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - "kube-*"
      - "gatekeeper-system"
  parameters:
    limits:
      - cpu
      - memory
    requests:
      - cpu
      - memory
